syntax = "proto3";

import "google/protobuf/timestamp.proto";

package form.v1;

option go_package = "github.com/theleeeo/form-forge/api-go/form/v1;form";

message Form {
  string base_id = 1;
  string version_id = 2;
  uint32 version = 3;
  string title = 4;
  string description = 5;
  repeated Question questions = 6;
  google.protobuf.Timestamp created_at = 7;
}

message Question {
  oneof question {
    TextQuestion text = 1;
    RadioQuestion radio = 2;
    CheckboxQuestion checkbox = 3;
  }
}

message TextQuestion { string title = 1; }

message RadioQuestion {
  string title = 1;
  repeated string options = 2;
}

message CheckboxQuestion {
  string title = 1;
  repeated string options = 2;
}

service FormService {
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);

  rpc Create(CreateRequest) returns (CreateResponse);

  rpc List(ListRequest) returns (ListResponse);

  // Updating the form will create a new version of the form with its contents
  // being the provided form
  rpc Update(UpdateRequest) returns (UpdateResponse);

  // rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message ResponsePagination {
  uint64 total = 1;
  // bytes next_page_token = 2;
}

message GetByIdRequest { string id = 1; }

message GetByIdResponse { Form form = 1; }

message CreateRequest {
  string title = 1;
  string description = 2;
  repeated CreateQuestionParameters questions = 3;
}

message CreateResponse { Form form = 1; }

message CreateQuestionParameters {
  oneof question {
    CreateTextQuestionParameters text = 1;
    CreateRadioQuestionParameters radio = 2;
    CreateCheckboxQuestionParameters checkbox = 3;
  }
}

message CreateTextQuestionParameters { string title = 1; }

message CreateRadioQuestionParameters {
  string title = 1;
  repeated string options = 2;
}

message CreateCheckboxQuestionParameters {
  string title = 1;
  repeated string options = 2;
}

message ListRequest {}

message ListResponse {
  repeated Form forms = 1;
  ResponsePagination pagination = 2;
}

message UpdateRequest {
  // The ID of the form to update
  string id = 1;
  // The new form to replace the old form with
  CreateRequest new_form = 2;
}

message UpdateResponse { Form form = 1; }